--- a/.gitconfig
+++ b/.gitconfig
@@ -1,8 +1,9 @@
 [user]
-	name = Glenn Grant
-	email = glenn@ensquared.net
+	name = Glenn 'devalias' Grant
+	email = glenn@devalias.net
 [core]
 	quotepath = false
+	excludesfile = /Users/alias/.gitignore_global
 [mergetool]
 	keepBackup = true
 [color]
@@ -21,3 +22,9 @@
 [branch "master"]
 	remote = origin
 	merge = master
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
